<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_EventData" Id="{0290e78d-b755-4be9-974e-5368e5c0796c}">
    <Declaration><![CDATA[TYPE ST_EventData :
STRUCT
	


	rVal 	: LREAL;
	iVal	: UDINT;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>